<resources>

    <string name="app_name">Leveling Glass</string>
    <string name="main_trim_toast">Trim set to %.1f dB</string>
    <string name="peerselection_message">Select a Bluetooth Device</string>
    <string name="peerselection_checking_dialog_message">Verifying the device is compatible</string>
    <string name="peerselection_invalid_dialog_message">The device you selected is not compatible with Leveling Glass</string>
    <string name="peerselection_nonefound_dialog_message">No peered devices!</string>
    <string name="levelselection_off">off</string>
    <string name="levelselection_none">None</string>
    <string name="levelselection_ppm">PPM</string>
    <string name="levelselection_digitalpeak">Digital Peak</string>
    <string name="levelselection_vu">VU</string>
    <string name="nolevel_clickhere">Click Here</string>
</resources>