<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radiogroup_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_levelselection_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/levelselection_none" />

        <RadioButton
            android:id="@+id/radio_levelsection_digitalpeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levelselection_digitalpeak" />

        <RadioButton
            android:id="@+id/radio_levelsection_ppm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levelselection_ppm" />

        <RadioButton
            android:id="@+id/radio_levelsection_vu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levelselection_vu"            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_holdtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textview_holdtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="2dp"
            android:text="@string/levelselection_off"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekbar_holdtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10" />
    </LinearLayout>

</LinearLayout>